fix overflow issue with hamburgur menu on mobile devices

--- a/styles.css
+++ b/styles.css
@@ -160,10 +160,6 @@ body {
     left: calc(100vw - 250px);
   }
 
-  /* #hamburger-menu:not(:checked) + .side-menu {
-    left: calc();
-  } */
-
   /* Alternative approach */
   /* #hamburger-menu:checked + .side-menu {
     display: block;
